# django-website

./: pyproject.toml
mysite/: db.sqlite3
mysite/blog/: admin.py  models.py  urls.py  views.py
mysite/blog/adapters/: ddbTable.py
mysite/blog/migrations/: 0001_initial.py  0002_post_delete_comments_delete_entry.py  0003_post_slug.py  0004_post_author.py  0005_comment.py
mysite/blog/templates/blog/: base.html  index.html  post_detail.html
mysite/mysite/: settings.py  urls.py
mysite/polls/: models.py  urls.py  views.py
mysite/polls/migrations/: 0001_initial.py  0002_rename_question_choice_question_text_and_more.py
mysite/polls/templates/polls/: index.html  results.html
